--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  display: flex;
+}
+.nav-link {
+  align-self: center;
+  text-decoration: none;
+}
+.nav-link a {
+  color: white;
+  text-decoration: none;
+  margin-left: 50vw;
+  font-size: larger;
+  letter-spacing: 1px;
+}
+
+.product-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.product-item {
+  display: flex;
+  flex-wrap: wrap;
+  height: 420px;
+  width: 250px;
+  align-items: center;
+  padding: 2rem;
+  overflow: hidden;
+  margin: 5px;
+  border: 1px solid;
+  margin: 20px 70px;
+}
+
+.product-list-img {
+  height: 300px;
+  width: 100%;
+}
+
+.logo {
+  color: white;
+  margin-left: 2vw;
+  letter-spacing: 3px;
+}
+
+.navbarContainer {
+  background-color: #2874f0;
+}
+
+.cartNav {
+  background-color: #2874f0;
+  color: white;
+  padding: 20px;
+  margin: 0;
+  display: flex;
+}
+
+.cartNav a {
+  color: white;
+  text-decoration: none;
+  padding-left: 20vw;
 }
